--- a/reverse.conf
+++ b/reverse.conf
@@ -36,11 +36,11 @@ http {
         listen       443 http2 ssl;
         listen       [::]:443 http2 ssl;
         root          /var/www/html;
-        server_name  *.wakabetter.site;
+        server_name  *.risanautos.online;
         
         
-        ssl_certificate /etc/ssl/certs/wakabetter.crt;
-        ssl_certificate_key /etc/ssl/private/wakabetter.key;
+        ssl_certificate /etc/ssl/certs/highbee.crt;
+        ssl_certificate_key /etc/ssl/private/highbee.key;
         ssl_dhparam /etc/ssl/certs/dhparam.pem;
 
       
@@ -53,7 +53,7 @@ http {
          
         location / {
             proxy_set_header             Host $host;
-            proxy_pass                   https://internal-wakabetter-internal-alb-1336136773.us-west-1.elb.amazonaws.com/; 
+            proxy_pass                   internal-highbee-internal-lb-1531307846.us-east-2.elb.amazonaws.com/; 
            }
     }
 }
