--- a/reverse.conf
+++ b/reverse.conf
@@ -53,7 +53,7 @@ http {
          
         location / {
             proxy_set_header             Host $host;
-            proxy_pass                   https://internal-highbee-internal-lb-1531307846.us-east-2.elb.amazonaws.com/; 
+            proxy_pass                   http://internal-highbee-internal-lb-1531307846.us-east-2.elb.amazonaws.com/; 
            }
     }
 }
